Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9342

It is possible that user defined LOVEA contains uninstantiated flag

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.0
    • Lustre 2.10.0
    • 3
    • 9223372036854775807

      This issue was created by maloo for bobijam <bobijam.xu@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/67af86be-2027-11e7-9073-5254006e85c2.

      The sub-test test_184d failed with the following error:

      swap /mnt/lustre/d184d.sanity/f184d.sanity-1 /mnt/lustre/d184d.sanity/f184d.sanity-2 layouts failed
      

      Info required for matching: sanity 184d

      If "lfs swap" tries to swap a file with partially instantiated layout, the partial LOVEA will passed into lod_declare_xattr_set()>lod_declare_striped_object()>lod_prepare_create()>lod_qos_parse_config()>lod_use_defined_striping(), so that lod_use_defined_striping() also need to take care of uninstantiated component entry.

            bobijam Zhenyu Xu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: