LU-9342 pfl: handle uninited component in user defined LOVEA

It is possible that user defined LOVEA contains uninstantiated flag
like replay of create or layout extend or lfs swap, the partial LOVEA
will passed into
lod_declare_xattr_set()->lod_declare_striped_object()->
lod_prepare_create()->lod_qos_parse_config()->
lod_use_defined_striping(),
so that lod_use_defined_striping() also need to take care of
uninstantiated component entry.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I45d46b118bcde66f4604b80e2da51a808f381219
Reviewed-on: https://review.whamcloud.com/26619
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>